--- a/Dag1-begreperFilosofi/1-Begreper.ipynb
+++ b/Dag1-begreperFilosofi/1-Begreper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a488ab36",
+   "id": "098003d6",
    "metadata": {},
    "source": [
     "### Begreper fra SAS-verden\n",
@@ -31,7 +31,12 @@
   },
   {
    "cell_type": "markdown",
-
+   "id": "54837504",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"kode\"\n",
     "Begrepet er ikke det enkleste og oversette ved googling da det i\n",
@@ -52,16 +57,16 @@
     "som eksekveres, enten i SAS, R, Python eller annet programmeringsspråk.\n",
     "Andre områder som bruker begrepet \"kode\" bør heller gjøres mer spesifikk eller endres,\n",
     "feks. \"svaralternativ\" eller \"tallkode i kategorisk kolonne\" osv."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "a2a5e7b3",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Variabel\"\n",
     "Variabel er enda ett kjært barn. mange har sterke forhold til hva en variabel er og hvordan den skal oppføre seg.\n",
@@ -78,16 +83,16 @@
     "variabel = \"Hello World\"\n",
     "\n",
     "```"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "a335bcdd",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"PROC\"\n",
     "Dette er ett begrep som kommer direkte fra SAS verdenen og på mange måter er veldig tett knyttet til det å jobbe\n",
@@ -96,31 +101,31 @@
     "\n",
     "Dette konseptet med prosedyrer er ikke tilstedet i hverken Python eller R. \n",
     "Begge disse programerings språkene\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "a05ad764",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Macroer\"\n",
     "I dette tilfellet er det som regel snakk om makroer i SAS. Dette er på mange måter ett eget programerings språk\n",
     "innen SAS økosystemet. Makroer er blokker av kode som kan kjøres over prosesser og systemer.\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "71506b12",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Macrovariabel\"\n",
     "Makro variabler er enda en av de begrepene som deler navn med en ting, men er noe annnet.\n",
@@ -129,16 +134,16 @@
     "\n",
     "Ett annet bruksområde ordet brukes til tider er i situasjoner der flere variabler (kollonner)\n",
     "i ett data sett er aggregert til en høyere nivåes informasjon."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "b25a71aa",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Koble\"\n",
     "Dette er ett av de mest forvirrende ordet vi har i stattistikk produksjon i SSB.\n",
@@ -149,16 +154,16 @@
     "\n",
     "Dette mangfoldet av bruksområdet har gjordt dette til ett megett forvirrende begrep.\n",
     "Fremmover kommer vi kun til å bruke dette ordet for å beskrive handlingen å `merge` eller `joine`to datasett sammen."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "459c76d0",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Omkoding\"\n",
     "Omkoding som begrep omfatter en rekke transformasjone av data. mor min (Simen) del så omfatter begrepet det å bytte\n",
@@ -168,16 +173,16 @@
     "\n",
     "Det har også vært brukt for å beskrive overgangen fra nummerisk verdi til en \"label\"\n",
     "som innimellom også betegnes som kobling."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "b21cdc62",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Grupperingsvariabel\" - \"Formater\"\n",
     "I Statistikk produksjon er Grupperings variabler kolonner som inneholder kattegoriske variabler som danner\n",
@@ -189,16 +194,16 @@
     "Ett eksempel er at det har lite hensikt og gruppere direkte på en persons årslønn, da variasjonen i lønninger\n",
     "forårsaker store mengder støy i data settet. Det er da mye bedre og lage en kattegorisk kolonne med\n",
     "lønns grupperinger, dette er da grupperings variableen for årslønn."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "afb1e984",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### \"Datatyper\": Bare \"karakter\" og \"numerisk\"?\n",
     "SAS opperer kun med to data typer. Det er `karakter`og `numerisk`. En numerisk kolonne kan kun inneholde verdiene\n",
@@ -210,32 +215,27 @@
     "\n",
     "Mer generiske programerings språk som R og Pyhon oppererer på langt flere data typer, som gjrø det mulig og\n",
     "spessifisere oppførselen til disse på en helt annen måte. men mer om det senere."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "a8523aae",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Det vi forsøker og få frem at det i SSB er mange utrykk som har flere, og ofte forskjellige betydninger.\n",
     "Dette er med på skape en god del forvirringer og usikkerheter blandt brukerne.\n",
     "I tillegg så er flere av disse begrepen brukt i opplærings øyemed, men da ganske ofte ikke med de\n",
     "betydningen vi er blidt vandt til fra hverdagen i SSB."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-
+   "id": "87a528d6",
+   "metadata": {},
    "source": [
     "### Begreper fra \"objekt-orientert\"-python-verden\n",
     "\n",
@@ -243,14 +243,11 @@
     "- Variable\n",
     "- Object (\"everything is an object\")\n",
     "- Class"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "9d7c4835",
+   "id": "d190b006",
    "metadata": {},
    "source": [
     "### En variabel med navn \"x\" av classen \"int\" er registrert som ett objekt med verdien \"6\"."
@@ -259,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "caad4cc5",
+   "id": "195d4c4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1c3e1b9",
+   "id": "c3b36b76",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "09b19029",
+   "id": "6a932089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb1e4a67",
+   "id": "1194d634",
    "metadata": {},
    "source": [
     "##### Vi overskriver variabelen \"x\" med ett objekt av classen \"float\" med verdi \"7.0\""
@@ -308,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c1b1d4a3",
+   "id": "c885f7a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5fcc17d",
+   "id": "15e4d58e",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae26138",
+   "id": "081cd29c",
    "metadata": {},
    "source": [
     "##### Variabelen er den samme, men har et annet objekt tilknyttet seg.\n",
@@ -348,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8cb425c5",
+   "id": "f13a8c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88954f97",
+   "id": "2c9ac5c4",
    "metadata": {},
    "source": [
     "### Variabelen \"y\" av classen \"string\" peker mot ett objekt som inneholder \"Ola\"."
@@ -366,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "829146c9",
+   "id": "b386993d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f3c1054",
+   "id": "9842e541",
    "metadata": {},
    "source": [
     "### Bonus: F-strings"
@@ -385,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e6559c0e",
+   "id": "1bd419b6",
    "metadata": {},
    "outputs": [
     {
@@ -405,8 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "655d7e60",
+   "execution_count": 2,
+   "id": "93af69f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c88a8e2",
+   "id": "832038e5",
    "metadata": {},
    "source": [
     "### Videohjelp: Datatyper"
@@ -424,8 +421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "27f99ce3",
+   "execution_count": 3,
+   "id": "c02af2c4",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -446,10 +443,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f6170362220>"
+       "<IPython.lib.display.IFrame at 0x7fe45c2295e0>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5238456d",
+   "id": "ba12ec77",
    "metadata": {},
    "source": [
     "### Videohjelp: Logikk, loops, funksjoner    "
@@ -471,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3d377d3d",
+   "id": "8b4d47f5",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "268fea39",
+   "id": "07512452",
    "metadata": {},
    "source": [
     "### Logikk\n",
@@ -520,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9c07b826",
+   "id": "c194416e",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7af7e32e",
+   "id": "eb8f29f9",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "1dd6e983",
+   "id": "d7ba4208",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "39b57068",
+   "id": "971e22a5",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "288d0582",
+   "id": "98f7cab8",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6e9ba3e8",
+   "id": "fdd98a23",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1084f4ca",
+   "id": "c126c685",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc266018",
+   "id": "599b934f",
    "metadata": {},
    "source": [
     "### Loops / tab inn\n",
@@ -685,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d957c38b",
+   "id": "387f94a3",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "046d5652",
+   "id": "2708fc3d",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80368b11",
+   "id": "7f22fd7a",
    "metadata": {},
    "source": [
     "# Innhold\n",
@@ -749,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "75d6b3ca",
+   "id": "1964d998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd03a6d",
+   "id": "552bd5a3",
    "metadata": {},
    "source": [
     "### \"iterables\"\n",
@@ -775,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "092c1ef2",
+   "id": "60ed7330",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "08ab031e",
+   "id": "8e7bfe0e",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7e64bb13",
+   "id": "733fa877",
    "metadata": {},
    "outputs": [
     {
@@ -833,10 +830,10 @@
      "evalue": "'tuple' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-63-8fb77929e3e7>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mg\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0;36m205\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"verdi3\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0;31m# Tuples er \"immutable\", og kan derfor ikke overskrives, eller legges til\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mg\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m\"nyverdi\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m: 'tuple' object does not support item assignment"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-8fb77929e3e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m205\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"verdi3\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Tuples er \"immutable\", og kan derfor ikke overskrives, eller legges til\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"nyverdi\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
@@ -849,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "94d05f8d",
+   "id": "9b3f629b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ee14c285",
+   "id": "210a01c2",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ce004f27",
+   "id": "05e38ea4",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ffdd8d",
+   "id": "1f627ac7",
    "metadata": {},
    "source": [
     "### Dataframe (fra pandas)\n",
@@ -911,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "030fc2ab",
+   "id": "385cb83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6ed2500a",
+   "id": "6a6ca228",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0b7629ed",
+   "id": "009e62a8",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "87230426",
+   "id": "eb691800",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31201590",
+   "id": "faf36fbc",
    "metadata": {},
    "source": [
     "### Operasjoner\n",
@@ -1065,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "1fab97d4",
+   "id": "7f8c2ce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "1e29ee7a",
+   "id": "ba23b113",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "45674ea2",
+   "id": "242ff9c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6ddd8ef8",
+   "id": "b9524bbf",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "511f4b92",
+   "id": "17639597",
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "04aee910",
+   "id": "b438dd10",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "004ca9c9",
+   "id": "09dc0a67",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c95310f1",
+   "id": "3875c0a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7b703ee4",
+   "id": "fd06f571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ad5fd099",
+   "id": "4829bdd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "984051b4",
+   "id": "0c26ea94",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf887b7a",
+   "id": "7b696aad",
    "metadata": {},
    "source": [
     "### Filosofi"
@@ -1286,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe433b96",
+   "id": "b34f97a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6015b3",
+   "id": "dc7ea836",
    "metadata": {},
    "source": [
     "#### \"PEP\"-er\n",
@@ -1305,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "171318bc",
+   "id": "2473d1d0",
    "metadata": {},
    "outputs": [],
    "source": []
