--- a/Dag1-begreperFilosofi/3-KonsepterOverlappR.ipynb
+++ b/Dag1-begreperFilosofi/3-KonsepterOverlappR.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b8f0748",
+   "id": "99446721",
    "metadata": {},
    "source": [
-    "# Likhetstrekk med f.eks. R"
+    "## Likhetstrekk med andre moderne, open-source programmeringsspråk, f.eks. R"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d6a9d66",
+   "id": "e02e5cce",
    "metadata": {},
    "source": [
     "https://www.dataquest.io/blog/python-vs-r/"
@@ -18,15 +18,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3e078e",
+   "id": "073669d1",
    "metadata": {},
    "source": [
-    "#### Skriv dine egne funksjoner"
+    "#### \"Lettlesthet\"\n",
+    "Lett å lese for nestemann. (Potensielt deg selv?)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2cc686c",
+   "id": "80649c33",
+   "metadata": {},
+   "source": [
+    "#### Skriv dine egne funksjoner\n",
+    "Eksponerer delkomponenter, slik at man kan endre grunnleggende funksjonalitet. Om man har behov og tid."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dda56464",
    "metadata": {},
    "source": [
     "#### Open-source -> Packages"
@@ -34,15 +44,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256f684d",
+   "id": "f4b7ee50",
    "metadata": {},
    "source": [
-    "Man \"importerer\" gjerne biblioteker avhengig av den funksjonaliteten man trenger."
+    "Gratis. (Kanskje man kan finne noen \"rammeverk\" det går an å betale for???)\\\n",
+    "Man \"importerer\" gjerne biblioteker avhengig av den funksjonaliteten man trenger. \\\n",
+    "Pypi = CRAN - Distribusjonssystemer / lokasjoner for pakker"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c555bb0",
+   "id": "d2bdeed9",
    "metadata": {},
    "source": [
     "#### Arbeid i Git"
@@ -50,15 +62,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b15f3e22",
+   "id": "169c76f9",
    "metadata": {},
    "source": [
-    "All utvikling i moderne kodespråk lener seg gjerne på samhandlingsverktøyet \"git\", el."
+    "All utvikling i moderne kodespråk lener seg gjerne på samhandlingsverktøyet \"git\". \\\n",
+    "Uavhengig av valgt programmeringsspråk eller \"miljø\", er dette en av kompetansene som bør bygges."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fcd89889",
+   "id": "c7a3fb71",
    "metadata": {},
    "source": [
     "<hr>"
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91628e42",
+   "id": "86b15426",
    "metadata": {},
    "source": [
     "# Forskjeller"
@@ -74,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "429e922b",
+   "id": "cf3cb4bc",
    "metadata": {},
    "source": [
     "\"R is more functional, Python more object-oriented\"\n",
@@ -85,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acf9491f",
+   "id": "78c1ae25",
    "metadata": {},
    "source": [
     "#### Generalisme"
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54c08b6",
+   "id": "ab04ab3b",
    "metadata": {},
    "source": [
     "\"Skriv en API, en nettside, ett dataspill, en GUI, en work-scheduler\""
@@ -101,18 +114,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84105ff7",
+   "id": "4b820de5",
    "metadata": {},
    "source": [
     "#### Namespaces\n",
-    "I R ligger funksjonen \"read_csv\" på \"bunnnivå\" etter innlast fra pakken \"readr\".\\\n",
-    "Andre pakker vil da \"ta plassen til\" read_csv i R, om de har noe med samme navn. Dette kalles \"mask\"."
+    "En merkbar forskjell? \\\n",
+    "I R ligger funksjonen \"read_csv\" på \"bunnnivå\" etter innlast fra pakken \"readr\".\\"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892ee72d",
+   "id": "88be897c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,17 +135,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d2caaf",
+   "id": "15efab81",
    "metadata": {},
    "source": [
+    "Andre pakker vil da \"ta plassen til\" read_csv i R, om de har noe med samme navn og lastes senere. Dette kalles \"mask\" eller \"masking\" av navnene på funksjonene / classene. \\\n",
     "Dette unngås i Python ved at metoden alltid ligger under pakken, derfor \"pd.\" i starten.\\\n",
-    "Noe som ofte fører til \"litt mer tekst\"."
+    "Noe som ofte fører til \"litt mer tekst\", men man unngår problematikken når pakkeforfattere ikke har snakket med alle andre pakkeforfattere for å finne opp kun unike navn..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52495b4",
+   "id": "a11dea82",
    "metadata": {},
    "outputs": [],
    "source": [
