--- a/Dag1-begreperFilosofi/6-Diskusjon.ipynb
+++ b/Dag1-begreperFilosofi/6-Diskusjon.ipynb
@@ -2,20 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c73e6a88",
+   "id": "b26fcb6e",
+   "metadata": {},
+   "source": [
+    "## Muligheter for diskusjon:\n",
+    "- Alternative IDEer? Arne?\n",
+    "- Hvorfor jobbe i Dapla versus Prodsonen, eller motsatt?\n",
+    "- Hvilke \"kompetanser\" er det vi bygger?\n",
+    "- Ønsker for dag2 / dag3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40d5cdaf",
    "metadata": {},
    "source": [
     "### Hva ønsker dere å se gjort i Python?\n",
+    "Og rekker vi det?\n",
     "\n",
     "- Microeditering / Excel?\n",
-    "- API Klass og Statbank\n",
+    "- API Klass og Statbank?\n",
     "\n",
     "Vi kommer til å begynne å plassere slik i \"senere\"-mappa i dette repoet."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a07ec63a",
+   "id": "71172e29",
    "metadata": {},
    "source": [
     "### Hvilke typer prosjekt og data skal dere jobbe på?\n",
@@ -24,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da970465",
+   "id": "dda47f6f",
    "metadata": {},
    "source": [
     "### Bruker vi samme begreper om de samme prosessene?\n",
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d108a930",
+   "id": "38555cfa",
    "metadata": {},
    "source": [
     "### Lekser? \n",
@@ -45,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7f431a",
+   "id": "1baf0033",
    "metadata": {},
    "outputs": [],
    "source": []
