--- a/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
+++ b/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52730f43",
+   "id": "37c25a06",
    "metadata": {},
    "source": [
     "### Kursstruktur\n",
-    "https://github.com/statisticsnorway/kurs-python-edx-companion (Se readme.md)\n",
+    "https://github.com/statisticsnorway/kurs-python-edx-companion\n",
     "\n",
     "- Dag1 - 2. juni - Begreper og filosofi\n",
     "    - Forelesning med diskusjoner og erfaringer\n",
@@ -17,33 +17,66 @@
     "    \n",
     "    \n",
     "- Dag3 - 7. juni - Pandas og operasjoner\n",
-    "    - Demoer og live-koding om tid"
+    "    - Demoer og live-koding etter lanserte behov, om tid"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "023053bb",
+   "id": "0f044ac9",
    "metadata": {},
    "source": [
-    "### Mål før kursdag2: Få dette \"repoet\" med kode-eksempler inn i \"din jupyter\" på Dapla"
+    "### Praktisk for dagen"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df7490e9",
+   "id": "04a70547",
+   "metadata": {},
+   "source": [
+    "- Se inndeling i file browseren\n",
+    "- Hvilke innmeldte ønsker skal vi takle i dag?\n",
+    "    - Ta utgangspunkt i SAS-begreper\n",
+    "    - Repetisjon av begreper i Python\n",
+    "    - Grunnleggende Python\n",
+    "    - Grunnleggende objekt-orientert programmering\n",
+    "- Vi skal også nevne:\n",
+    "    - Noen likhetstrekk med R og andre open-source, moderne programmeringsspråk\n",
+    "    - Pythons posisjon i open-source markedet\n",
+    "    - Hvordan finne og tolke dokumentasjon\n",
+    "- Mulighet for diskusjon på slutten rundt temaene:\n",
+    "    - Alternative IDEer\n",
+    "    - Hvorfor jobbe i Dapla versus Prodsonen?\n",
+    "    - Hvilke \"kompetanser\" er det vi bygger?\n",
+    "    - Ønsker for dag2 / dag3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17d88388",
+   "metadata": {},
+   "source": [
+    "### Mål før kursdag2: Få dette \"repoet\" med kode-eksempler inn i \"din jupyter\" på Dapla\n",
+    "Vi ønsker at dere aktivt tar i bruk denne kodebasen, prøver ut, skriver om, kopierer fra det osv. \\\n",
+    "Kom med forslag til kodeendringer oss på <a href=\"https://github.com/statisticsnorway/kurs-python-edx-companion/issues\">github-issues</a>? Eller be om å få skrivetilgang \"commit/merge-access\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e9dfcd4",
    "metadata": {},
    "source": [
     "- \"Stå i rett mappe\" på dapla\n",
     "- I terminalen: \\\n",
     "git clone https://github.com/statisticsnorway/kurs-python-edx-companion.git\n",
-    "- Eller i en notebook (som ligger i root): \\\n",
+    "- Eller i en notebook på dapla: \\\n",
+    "%cd /home/jovyan/ \\\n",
     "!git clone https://github.com/statisticsnorway/kurs-python-edx-companion.git \\\n",
     "(er også en knapp for clone i mappe-utforskeren på dapla)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8ecc965a",
+   "id": "75141500",
    "metadata": {},
    "source": [
     "#### De som ikke får til dette, ta kontakt med oss utenfor kursstid så skal vi hjelpe til med å få det opp.\n",
