--- a/Dag2-miljo/7-oppsummering.ipynb
+++ b/Dag2-miljo/7-oppsummering.ipynb
@@ -1,9 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3c8dd9d7",
+   "metadata": {},
+   "source": [
+    "## Muligheter for diskusjon:\n",
+    "- Dokumentasjon \"nært\" koden?\n",
+    "- Penere plots?\n",
+    "- Hvordan gå frem for å velge produksjonsløpskandidater for verdivurdering og dapla-ingest?\n",
+    "- Hvorfor er Github så \"async\"?\n",
+    "- Taktikker når errors i Git først oppstår?\n",
+    "- Konkrete ønsker for dag3 ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97fd7b08",
+   "metadata": {},
+   "source": [
+    "### Lekser? \n",
+    "- Ta quiz (ark 8)\n",
+    "- Finn ting i EDX-kursene dere setter dere fast på og rapporter dem til oss\n",
+    "- Meld inn ønsker om videoer om spesifikke behov, til Carl + Christine også etter dag3 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "873b19a0",
+   "id": "2aaed641",
    "metadata": {},
    "outputs": [],
    "source": []
